--- a/PocketSqlUI/package.json
+++ b/PocketSqlUI/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.11.0",
     "monaco-editor": "^0.52.2",
     "react": "^19.1.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
