--- a/PocketSqlUI/package.json
+++ b/PocketSqlUI/package.json
@@ -13,8 +13,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@monaco-editor/react": "^4.7.0",
-    "@mui/material": "^7.2.0",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/lab": "^7.0.0-beta.16",
+    "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.9.1",
+    "@mui/x-tree-view": "^8.10.2",
     "axios": "^1.11.0",
     "monaco-editor": "^0.52.2",
     "react": "^19.1.0",
