--- a/PocketSqlUI/package.json
+++ b/PocketSqlUI/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -18,6 +20,9 @@
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.9.1",
     "@mui/x-tree-view": "^8.10.2",
+    "@tauri-apps/api": "^2.8.0",
+    "@tauri-apps/plugin-dialog": "^2.4.0",
+    "@tauri-apps/plugin-http": "^2.5.2",
     "axios": "^1.11.0",
     "monaco-editor": "^0.52.2",
     "react": "^19.1.0",
@@ -26,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@tauri-apps/cli": "^2.8.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
